# docker-vcpkg

./: .gitignore  Dockerfile.alpine  Dockerfile.debian  LICENSE  README.md  checked_download.sh  install_vcpkg.sh  renovate.json  version_os_images.env  version_vcpkg.env
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/actions/setenv/: action.yml
.github/workflows/: main.yml  pr.yml
testproject/: CMakeLists.txt  vcpkg.json
testproject/src/: CMakeLists.txt  fmt-tests.cpp
